# cTorrent

./: CMakeLists.txt  build.sh  readme.md  test.sh
docs/: docs.md
src/Application/CLI/: main.c
src/Core/File/: CMakeLists.txt  CoreFile.c  CoreFile.h
src/Core/Generic/: CMakeLists.txt  CoreDictionary.c  CoreDictionary.h  CoreList.c  CoreList.h  CoreStack.c  CoreStack.h
src/Core/Networking/: CMakeLists.txt  CoreNetworking.c  CoreNetworking.h
src/Core/Socket/: CMakeLists.txt  CoreSocket.c  CoreSocket.h
src/Core/String/: CMakeLists.txt  CoreString.c  CoreString.h
src/Protocol/Bencode/: Bencode.c  Bencode.h  CMakeLists.txt
src/Protocol/BitTorrent/: CMakeLists.txt  MetadataClient.c  MetadataClient.h  TorrentDownloader.c  TorrentDownloader.h  WebbasedClient.c  WebbasedClient.h
tests/: CMakeLists.txt  test_core_file.c  test_core_socket.c  test_protocol_bencode.c
